avoid jumps

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body{
 *::selection {
     color: var(--background-menu);
     background-color: var(--font);
+    opacity: 1;
 }
 
 p,li {
@@ -76,7 +77,7 @@ ul li::before {
     content: '·';
     color: var(--font);
     margin-right: .5em;
-    margin-left: -.8em;
+    margin-left: -.9em;
 }
 blockquote {
     font-style: italic;
@@ -118,7 +119,7 @@ p {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 110%;
     position: fixed;
     padding: 0;
     margin: 0;
